# vibe-screenshot

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Main.qml  PreviewWindow.qml  README.md  RegionSelector.qml  main.cpp  screenshotmanager.cpp
importedcontent/: vibe_coding.lnk
qml/: Main.qml
scripts/: generate_icon.py  generate_icon_from_png.py
src/: main.cpp  screenshotmanager.h
